# twigbot

./: .env  .env.example  2.0.shit  Contributor License Agreement  JSBranch  LICENSE  MANIFEST.in  README.md  config.js  config.json  config.py  eval.py  index.css  index.html  index.js  main.py  music.py  nextcord.info  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  say.py  tsconfig.json  twig.py
cogs/: avatar.py  info.py  mod.py  purge.py  say.py  slowmode.py
coming soon/: automod.py  economy.py  eval.py  logger.py  mod.py  music.py
commands/: giveaway.js
doc/: why.shitweb
doc/css/: python.css
doc/html/: features.html  python.html
doc/python/: __init__.py  dashboardlead.py  login.py
doc/ts/: integration.ts
docs/: setup.md
handlers/: command.js
locales/en/: HELP_MENU_EN.json
locales/es/: HELP_MENU_ES.json
resources/etc/: tutorials.txt
resources/images/: 2.0.logo.shit
src/: features.shit  fun.py  moderation.py  twitter.py
src_hidden/: automod.py  info.shit
structures/: Client.js
twigcord/: __init__.py  __main__.py  abc.py  appinfo.py  channel.py  client.py  components.py  embeds.py  emoji.py  errors.py  gateway.py  guild.py  health_check.py  http.py  interactions.py  iterators.py  message.py  player.py  shard.py  threads.py  utils.py
twigcord/types/: __init__.py
twigcord/ui/: __init__.py  button.py  item.py  select.py  view.py
twigcord/webhook/: __init__.py  async_.py  sync.py
web/: expectations.shit
website/css/: edashboard.css  forum.css  index.css
website/html/: devforum.html  index.html  (+2 more)
(+20 files in other folders)
