[tool.poetry]
name = "repl_python3_beta_twigbot"
version = "0.1.0"
description = ""
authors = ["TechPlus1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pymongo = "^3.12.0"
aiohttp = "^3.7.4"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
